[gd_scene load_steps=2 format=3 uid="uid://cthcgga6l13c8"]

[ext_resource type="Script" uid="uid://d1b1ihnnt5og2" path="res://MainMenu.gd" id="1_1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Escolha uma opção"
horizontal_alignment = 1

[node name="ServerOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Criar Sala (Host)"

[node name="ClientButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Entrar em Sala (Cliente)"

[node name="OIDInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Digite o OID do host aqui"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/ClientButton" to="." method="_on_client_pressed"]
